FlexMath unit testing and fixes, OpenGLRendering working
- added math conversions (deg and rad)
- added vector1 and matrix1x1
- added more precision to math constants
- added current window context for application and window management
- replaced manual clear screen in window update loop with OpenGLRenderer
- massive fixes and improvements to matrix4x4 and vectors
- reimplemented vector4 operator*
- improvements to openglrenderer
- fixes to set uniform functionality in openglshaders
- updated renderer shaders
- added local and global components
- massive updates to OpenGLRendering project (everything mostly works now)
- added unit testing for vector and matrix classes in the FlexMath library

--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -175,6 +175,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClCompile Include="src\FlexEngine\FlexECS\entity.cpp" />
     <ClCompile Include="src\FlexEngine\FlexECS\scene.cpp" />
     <ClCompile Include="src\FlexEngine\flexformatter.cpp" />
+    <ClCompile Include="src\FlexEngine\FlexMath\mathconversions.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\matrix4x4.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\vector2.cpp" />
     <ClCompile Include="src\FlexEngine\FlexMath\vector3.cpp" />
@@ -221,8 +222,11 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\DataStructures\functionqueue.h" />
     <ClInclude Include="src\FlexEngine\FlexECS\datastructures.h" />
     <ClInclude Include="src\FlexEngine\flexformatter.h" />
+    <ClInclude Include="src\FlexEngine\FlexMath\mathconversions.h" />
+    <ClInclude Include="src\FlexEngine\FlexMath\matrix1x1.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\matrix4x4.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\mathconstants.h" />
+    <ClInclude Include="src\FlexEngine\FlexMath\vector1.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\vector2.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\vector3.h" />
     <ClInclude Include="src\FlexEngine\FlexMath\vector4.h" />
