--- a/OpenGLRendering/imgui.ini
+++ b/OpenGLRendering/imgui.ini
@@ -8,5 +8,16 @@ Pos=164,146
 Size=929,399
 Collapsed=0
 
+[Window][Properties]
+Pos=866,55
+Size=393,611
+Collapsed=0
+
+[Window][Image]
+ViewportPos=2002,169
+ViewportId=0x04FC2B5B
+Size=924,395
+Collapsed=0
+
 [Docking][Data]
 
