implemented SetIcon, various fixes, optimizations, and improvements
- renamed Path::current_path to Path::current
- AssetManager::Get now performs path separator alignment
- added SetIcon to window
- renamed internal functions in opengltextures
- optimized opengltextures
- opengltextures now stores raw image data
- fixed wrong \ used in project lib dependencies
- added prelink dll copy to FlexEngine to copy the assimp dlls to the output directory
- added simple assimp test
- added custom title bar to openglrendering project

--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -131,6 +131,9 @@
       <Command>xcopy "$(SolutionDir)third_party\lib\fmod\core\fmodL.dll" "$(OutDir)" /s /r /y /q
 xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudioL.dll" "$(OutDir)" /s /r /y /q</Command>
     </PostBuildEvent>
+    <PreLinkEvent>
+      <Command>xcopy "$(SolutionDir)third_party\assimp\bin\Debug\assimp-vc143-mtd.dll" "$(OutDir)" /s /r /y /q</Command>
+    </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -161,6 +164,9 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudioL.dll" "$(OutDir)" /s
       <Command>xcopy "$(SolutionDir)third_party\lib\fmod\core\fmod.dll" "$(OutDir)" /s /r /y /q
 xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s /r /y /q</Command>
     </PostBuildEvent>
+    <PreLinkEvent>
+      <Command>xcopy "$(SolutionDir)third_party\assimp\bin\Release\assimp-vc143-mt.dll" "$(OutDir)" /s /r /y /q</Command>
+    </PreLinkEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\third_party\src\glad\glad.c" />
