added simd macros, tweaks to flx_api.h

--- a/FlexEngine/FlexEngine.vcxproj
+++ b/FlexEngine/FlexEngine.vcxproj
@@ -264,6 +264,7 @@ xcopy "$(SolutionDir)third_party\lib\fmod\studio\fmodstudio.dll" "$(OutDir)" /s 
     <ClInclude Include="src\FlexEngine\Wrapper\flexassert.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\path.h" />
     <ClInclude Include="src\FlexEngine\Wrapper\range.h" />
+    <ClInclude Include="src\FlexEngine\Wrapper\simd.h" />
     <ClInclude Include="src\flx_api.h" />
     <ClInclude Include="src\pch.h" />
     <ClInclude Include="src\FlexEngine.h" />
